<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity = "center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/question_first"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/choice1_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1_answer1_Button"/>


        <Button
            android:id="@+id/choice2_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1_option2_Button"/>
        <!--            android:text="@string/question1_option2_Button" />-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/choice3_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1_option3_Button"/>
        <!--            android:text="@string/question1_option3_Button"/>-->
        <Button
            android:id="@+id/choice4_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1_option4_Button"/>
        <!--            android:text="@string/question1_option4_Button"/>-->
    </LinearLayout>
</LinearLayout>